force-app/main/default/objects/Conveyance_Contact_Role__c/Conveyance_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Contract Contact Role</label>
    <nameField>
        <displayFormat>CCR-{000000}</displayFormat>
        <label>CCR#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>