force-app/main/default/objects/Conveyance_Contact_Role__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(ISPICKVAL(Contact__r.ContactType__c, &quot;Agent&quot;), HYPERLINK(&quot;/&quot; &amp; Contact__r.AccountId, Contact__r.Account.Name), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>