force-app/main/default/objects/Conveyance_Contact_Role__c/fields/AML__c.field-meta.xml
<CustomField>
    <fullName>AML__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AML</label>
    <referenceTo>AML__c</referenceTo>
    <relationshipName>Conveyance_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>