force-app/main/default/objects/Conveyance_Contact_Role__c/fields/Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Conveyance__c</fullName>
    <label>Contract</label>
    <referenceTo>Conveyance__c</referenceTo>
    <relationshipLabel>Contract Contact Roles</relationshipLabel>
    <relationshipName>Conveyance_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>