force-app/main/default/objects/Conveyance_Contact_Role__c/fields/Listing_Name__c.field-meta.xml
<CustomField>
    <fullName>Listing_Name__c</fullName>
    <formula>Conveyance__r.Inquiry__r.Listing__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Name</label>
    <type>Text</type>
</CustomField>