force-app/main/default/objects/Conveyance_Contact_Role__c/fields/Listing_Title__c.field-meta.xml
<CustomField>
    <fullName>Listing_Title__c</fullName>
    <formula>Conveyance__r.Listing_L__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Title</label>
    <type>Text</type>
</CustomField>