force-app/main/default/objects/Conveyance_Contact_Role__c/fields/Third_Party_Agency__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Conveyance_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>