force-app/main/default/objects/Conveyance_Contact_Role__c/validationRules/Role_is_3rd_Party_Agent_then_Lux_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_is_3rd_Party_Agent_then_Lux_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Role__c , &quot;3rd Party Agent&quot;),
  NOT(ISBLANK( Lux_Agent__c ))
)</errorConditionFormula>
    <errorDisplayField>Lux_Agent__c</errorDisplayField>
    <errorMessage>When the role is &apos;3rd Party Agent&apos;, the Lux Agent must be blank</errorMessage>
</ValidationRule>