force-app/main/default/objects/Conveyance_Contact_Role__c/validationRules/Role_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( Contact__c &lt;&gt;  null, ISPICKVAL( Role__c , &quot;&quot;) ), true, false)</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>Role is Mandatory on Conveyance Contact Role.</errorMessage>
</ValidationRule>