force-app/main/default/objects/Conveyance_Contact_Role__c/validationRules/Select_Only_One_Contact_OR_Lux_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Only_One_Contact_OR_Lux_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(Contact__c = NULL ,Lux_Agent__c = NULL),
AND(Contact__c!=NULL, Lux_Agent__c!=NULL))</errorConditionFormula>
    <errorDisplayField>AML__c</errorDisplayField>
    <errorMessage>You Can Select only one from Contact Or Lux Agent</errorMessage>
</ValidationRule>